--- a/app/views/PillarAnalysis/AnalyticalStatementInput/StoryAnalysisModal/EntryCard/styles.css
+++ b/app/views/PillarAnalysis/AnalyticalStatementInput/StoryAnalysisModal/EntryCard/styles.css
@@ -11,6 +11,13 @@
     .heading-section {
         align-items: center;
 
+        .authors {
+            display: inline-block;
+            max-width: 70px;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+        }
         .heading-container {
             align-items: center;
 
